Let user set the winnig score.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
                 </div>
             </div>
             
+            <div class="set-winning-score">
+                <label>Set Winning score</label>
+                <input id="winning-score" type="text">
+            </div>
+
             <button class="btn-new"><i class="ion-ios-plus-outline"></i>New game</button>
             <button class="btn-roll"><i class="ion-ios-loop"></i>Roll dice</button>
             <button class="btn-hold"><i class="ion-ios-download-outline"></i>Hold</button>
